Fixed z-index on nav and featured section

--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,7 @@ header .pre-header .title {
 }
 header nav {
   position: fixed;
+  z-index: 2;
   background-color: black;
   width: 100%;
 }
@@ -137,6 +138,7 @@ section.featured {
   grid-gap: 1rem;
   background: linear-gradient(to top, #1b1b1b 0%, #373737 100%);
   padding-bottom: 100px;
+  z-index: 1;
 }
 section.featured:hover .featured-item {
   filter: blur(20px);
