--- a/custom-library/layout/_header.scss
+++ b/custom-library/layout/_header.scss
@@ -40,7 +40,7 @@ header {
   }
   nav {
     position: fixed;
-
+    z-index: 2;
     background-color: black;
     width: 100%;
     ul {
